# bms-trainer

./: README.md
trainer-decoder/cfg/: libs.txt
trainer-decoder/src/: CMakeLists.txt  DecodeServer.cpp  DecodeServer.h  ShmManager.cpp  ShmManager.h  packet_decoder.cpp
trainer-student/src/shm/: MEMORY_BASIC_INFORMATION.java  SharedMemory.scala
trainer-student/src/trainer/: AppConfig.scala  Main.java  ScalaMain.scala
trainer-student/src/trainer/modules/decompressor/: ShmStream.scala
trainer-student/src/trainer/modules/gui/: DisplayManager.scala  Gui.scala  InboundListItem.scala  InboundStreamWindow.scala  ItemList.scala  ListItem.scala  ScalaHelper.scala  TrainerGui.java
trainer-student/src/trainer/modules/msgs/: ShmNotifiationParser.scala  ShmNotificationMsg.scala  StreamPacket.scala
trainer-student/src/trainer/modules/server/: Server.scala
trainer-transmitter/cfg/: libs.txt  postBuildHook.bat  postBuildLoader.bat  stream_trainer.ini
trainer-transmitter/src/hook/: DxSurfaceCopyer.cpp  DxSurfaceCopyer.h  DxSurfaceStream.cpp  DxSurfaceStream.h  DxTcpMirror.cpp  DxTcpMirror.h  GetSurfaceDescr.h  HookCfg.cpp  HookCfg.h  ID3D9Wrapper.cpp  ID3D9Wrapper.h  ID3D9Wrapper_Device.cpp  ID3D9Wrapper_Device.h  ScopedSurface.h  main.cpp
